Add basic folder structure
- Add folders to src folder.
- Add basic files to theme following ITCSS standard.
- Add font files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@env/*": ["src/environments/*"],
+      "@const/*": ["src/constants/*"],
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
